<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="338dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sumar"
        app:layout_constraintBottom_toTopOf="@+id/btnZoomMas"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="66dp"
        android:text="@string/restar"
        app:layout_constraintBottom_toTopOf="@+id/btnZoomMen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/btnZoomMas"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="20dp"
        android:text="@string/zoommas"
        app:layout_constraintBottom_toTopOf="@+id/btnOcultar"
        app:layout_constraintEnd_toStartOf="@+id/btnZoomMen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar" />

    <Button
        android:id="@+id/btnZoomMen"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="66dp"
        android:text="@string/zoommen"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnZoomMas"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar" />

    <Button
        android:id="@+id/btnOcultar"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="168dp"
        android:text="@string/ocultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnZoomMas" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="165dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOcultar"
        app:layout_constraintTop_toBottomOf="@+id/btnZoomMen" />

    <ImageView
        android:id="@+id/imgPrimeraActivity"
        android:layout_width="220dp"
        android:layout_height="199dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="79dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tvDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/calculator" />
</androidx.constraintlayout.widget.ConstraintLayout>